k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: flask-app
  labels:
    app: flask-backend
spec:
  type: ClusterIP
  selector:
    app: flask-backend
  ports:
  - name: http
    port: 80
    targetPort: 5000
    protocol: TCP
